tests/specs/npm/cjs_module_export_assignment/main.out
TS1540 [ERROR]: A 'namespace' declaration should not be declared using the 'module' keyword. Please use the 'namespace' keyword instead.
declare module ThisModule {
               ~~~~~~~~~~
    at file:///[WILDLINE]/index.d.ts:1:16

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
